--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -6,6 +6,7 @@
     <title>{% block page_title %}Trollé{% endblock %}</title>
     <link rel="stylesheet" href="{{ asset("../ressources/css/navstyle.css") }}"> <!--TODO into asset-->
     <link rel="stylesheet" href="{{ asset("../ressources/css/trellostyle.css") }}">  <!--TODO into asset-->
+    <link rel="stylesheet" href="{{ asset("../tests/tests.css") }}">  <!--TODO into asset-->
 
 </head>
 
