feat : tentatives de correction

--- a/src/vue/tableau/listeTableauxUtilisateur.html.twig
+++ b/src/vue/tableau/listeTableauxUtilisateur.html.twig
@@ -28,7 +28,7 @@
 
         </div>
         <div>
-            <a href='{{route('creerTableau')}}'>Ajouter un tableau</a>
+            <a href='{{route('afficherFormulaireCreationTableau')}}'>Ajouter un tableau</a>
         </div>
     </div>
 
