--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -11,9 +11,9 @@
             <h3>{{ tableau.titreTableau }}</h3>
             <div class="allUsers">
                 <h4>Collaborateurs :</h4>
-                <span class="user"> {{ tableau.utilisateur.prenom[0] }} {{ tableau.utilisateur.nom[0] }} </span>
+                <span class="user"> {{ tableau.utilisateur.nom|slice(0,1) }}</span>
                 {% for participant in tableau.participants %}
-                    <span class="user">{{ partipant.prenom[0] }} {{ participant.nom[0] }}</span>
+                    <span class="user">{{ partipant.prenom|slice(0,1) }} {{ participant.nom|slice(0,1) }}</span>
                 {% endfor %}
                 <div class="invite">Partager <img src="{{ asset('../tests/inviter.png') }}" alt=""></div>
             </div>
@@ -46,7 +46,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    {#  #}
+
                     <div class="add" data-columns="{{ colonnes[i].idColonne }}">
                         <img src="{{ asset('../tests/plus.png') }}" alt="">
                         Ajouter une carte
