feat : changements twig

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -30,8 +30,7 @@
                     </div>
 
                     <!-- Stockage des cartes -->
-                    <div class="stockage" data-htmlfun="formulaireAjoutCarte.afficherCarte()"
-                         data-columns="{{ colonnes[i].idColonnne }}">
+                    <div class="stockage" data-columns="{{ colonnes[i].idColonnne }}">
 
                         {% for carte in data[i] %}
                             <div class="card">
