rebase : modifications pour API

--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{{ asset("../ressources/css/trellostyle.css") }}">  <!--TODO into asset-->
     <link rel="stylesheet" href="{{ asset("../tests/tests.css") }}">  <!--TODO into asset-->
 
+    <script type="text/javascript" src="{{ asset('../tests/tableaux.js') }}" defer></script>
+    <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
+
+
 </head>
 
 <body>
