--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -4,8 +4,10 @@
 {% block page_title %}Trollé{% endblock %}
 
 {% block page_content %}
-    <script type="text/javascript" src="{{ asset('../tests/tableaux.js') }}" defer></script>
-    <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
+
+    <script type="text/javascript">let siteBase = "{{ asset('.') }}";
+        let apiBase = siteBase + "/api";</script>
+
     <p>{{ tableau.utilisateur.nom is null }}</p>
     <div class="all">
 
