feat : début réactif formulaireAjoutParticipant

--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -10,6 +10,7 @@
 
     <script type="text/javascript" src="{{ asset('../tests/tableaux.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
+    <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutParticipant.js') }}" defer></script>
 
 
 </head>
