--- a/tests/tests.css
+++ b/tests/tests.css
@@ -700,7 +700,7 @@ body {
     transform: translate(-50%, -50%);
     width: 500px;
     min-height: 30%;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
