--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -129,10 +129,10 @@
         </div>
         <div class="content"><h4>Adresse mail du collaborateur :</h4>
             <label>
-                <input type="email" class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
+                <input type="email" data-reactiveIput="formulaireAjoutParticipant.rechercherDebutAdresseMail" class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
             </label>
         </div>
-        <div class="boutonAjout">Terminer</div>
+        <div data-onclick="formulaireAjoutParticipant.envoyerFormulaire" class="boutonAjout">Terminer</div>
     </div>
 
 
