--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -105,18 +105,20 @@
                    data-reactiveInput="formulaireAjoutCarte.couleur">
         </div>
         <div class="content"><h4>Membres affectés :</h4>
-            {% if participants|length > 0 %}
-                {% for participant in participants %}
-                    <label>
-                        <input type="checkbox"
-                               data-reactiveInput="formulaireAjoutCarte.affectation"
-                               value="{{ participant.idUtilisateur }}">
-                        {{ participant.prenom }} {{ participant.nom }}
-                    </label>
-                {% endfor %}
-            {% else %}
-                <p>Il n'y a pas de collaborateurs pour le moment. <span class="addCollborateurs">Ajouter des collaborateurs</span></p>
-            {% endif %}
+            <div class="listeParticipants">
+                {% if participants|length > 0 %}
+                    {% for participant in participants %}
+                        <label>
+                            <input type="checkbox"
+                                   data-reactiveInput="formulaireAjoutCarte.affectation"
+                                   value="{{ participant.idUtilisateur }}">
+                            {{ participant.prenom }} {{ participant.nom }}
+                        </label>
+                    {% endfor %}
+                {% else %}
+                    <p>Il n'y a pas de collaborateurs pour le moment</p><span class="addCollborateurs">Ajouter des collaborateurs</span>
+                {% endif %}
+            </div>
         </div>
         <div class="boutonCreation" data-onclick="formulaireAjoutCarte.envoyerFormulaire">Créer</div>
     </div>
@@ -124,14 +126,16 @@
 
     <div class="formulaireAjoutMembreTableau">
         <div class="wrap"><h2>Ajout de Collaborateurs</h2> <img onclick="listenerFermerAjoutMembre()" class="closeCard"
-                                                                 src="{{ asset('../tests/close.png') }}"
-                                                                 alt="">
+                                                                src="{{ asset('../tests/close.png') }}"
+                                                                alt="">
         </div>
         <div class="content"><h4>Adresse mail du collaborateur :</h4>
             <label>
-                <input type="email" data-reactiveIput="formulaireAjoutParticipant.rechercherDebutAdresseMail" class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
+                <input type="email" data-reactiveIput="formulaireAjoutParticipant.rechercherDebutAdresseMail"
+                       class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
             </label>
-            <div class="checkBoxCollaborateurs" data-htmlfun="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur"></div>
+            <div class="checkBoxCollaborateurs"
+                 data-htmlfun="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur"></div>
         </div>
         <div data-onclick="formulaireAjoutParticipant.envoyerFormulaire" class="boutonAjout">Terminer</div>
     </div>
