--- a/tests/tests.css
+++ b/tests/tests.css
@@ -511,6 +511,40 @@ body {
             color: black;
         }
 
+        .listeParticipants {
+            width: 98%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            padding: 1%;
+            background-color: #23272b;
+            text-align: center;
+
+            .addCollborateurs {
+                width: 50%;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                background-color: #8100ff;
+                border-radius: 5px;
+                transition: all 200ms ease-in-out;
+                cursor: pointer;
+                border: 2px solid transparent;
+            }
+
+            .addCollborateurs:hover {
+                background-color: white;
+                color: black;
+                border: 2px solid #8100ff;
+            }
+        }
+
     }
 
     .boutonCreation {
