fix : corrections relatives au TWIG et au JS

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -8,6 +8,11 @@
     <script type="text/javascript">let siteBase = "{{ asset('.') }}";
         let apiBase = siteBase + "/api";</script>
 
+    <script>
+        let bulletsImageUrl = "{{ asset('../tests/bullets.png') }}";
+        let plusImageUrl = "{{ asset('../tests/plus.png') }}";
+    </script>
+
     <p>{{ tableau.utilisateur.nom is null }}</p>
     <div class="all">
 
