feat : avancées ajoutParticipants

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -135,10 +135,11 @@
                                                                 alt="">
         </div>
         <div class="content"><h4>Adresse mail du collaborateur :</h4>
-            <label>
-                <input type="email" data-reactiveIput="formulaireAjoutParticipant.rechercherDebutAdresseMail"
-                       class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
-            </label>
+
+            <input type="email" data-reactiveIput="formulaireAjoutParticipant.rechercherDebutAdresseMail"
+                   class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
+            <div class="listeAjouter"><p>Test</p></div>
+
             <div class="checkBoxCollaborateurs"
                  data-htmlfun="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur"></div>
         </div>
