--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -20,7 +20,7 @@
             <h3>{{ tableau.titreTableau }}</h3>
             <div class="allUsers">
                 <h4>Collaborateurs :</h4>
-                <span class="user"> {{ tableau.utilisateur.nom|slice(0,1) }}</span>
+                <span class="user"> {{ tableau.utilisateur.prenom|slice(0,1) }}{{ tableau.utilisateur.nom|slice(0,1) }}</span>
                 {% for participant in tableau.participants %}
                     <span class="user">{{ partipant.prenom|slice(0,1) }} {{ participant.nom|slice(0,1) }}</span>
                 {% endfor %}
@@ -136,9 +136,9 @@
         </div>
         <div class="content"><h4>Adresse mail du collaborateur :</h4>
 
-            <input type="email" data-reactiveIput="formulaireAjoutParticipant.rechercherDebutAdresseMail"
-                   class="inputCreationCarte" placeholder="Entrez l'adresse mail du collaborateur">
-            <div class="listeAjouter"><p>Test</p></div>
+            <input type="email" data-reactiveInput="formulaireAjoutParticipant.adresseMailARechercher" data-onChange="formulaireAjoutParticipant.rechercherDebutAdresseMail"
+                   class="inputAjoutMembre" placeholder="Entrez l'adresse mail du collaborateur">
+            <div class="listeAjouter"><p data-onclick="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur('touzer', 'RT', true)">Test</p></div>
 
             <div class="checkBoxCollaborateurs"
                  data-htmlfun="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur"></div>
