feat : avancées INCROYABLES ajout membre tableau - reste ajout par API

--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -138,7 +138,7 @@
 
             <input type="email" data-reactiveInput="formulaireAjoutParticipant.adresseMailARechercher" data-onChange="formulaireAjoutParticipant.rechercherDebutAdresseMail"
                    class="inputAjoutMembre" placeholder="Entrez l'adresse mail du collaborateur">
-            <div class="listeAjouter"><p data-onclick="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur('touzer', 'RT', true)">Test</p></div>
+            <div class="listeAjouter"></div>
 
             <div class="checkBoxCollaborateurs"
                  data-htmlfun="formulaireAjoutParticipant.ajouterCheckboxPourUtilisateur"></div>
