--- a/tests/tests.css
+++ b/tests/tests.css
@@ -867,3 +867,48 @@ body {
 
     }
 }
+
+.checkBoxCollaborateurs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    width: 98%;
+    padding-top: 10px;
+
+    *{
+        flex-shrink: 0;
+    }
+
+    label {
+        width: auto!important;
+    }
+
+    input[type="checkbox"] {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        border: 2px solid #8100ff;
+        border-radius: 5px;
+        position: relative;
+    }
+
+    input[type="checkbox"]:checked {
+        background-color: #8100ff;
+    }
+
+    input[type="checkbox"]:checked:after {
+        content: '✓';
+        font-size: 20px;
+        color: white;
+        position: absolute;
+        top: -5px;
+        left: 0;
+    }
+
+    .user {
+        margin-bottom: 0;
+        margin-right: 10px;
+    }
+
+}
