feat : mdr j'ai rien dis c'est un échec. A demain

--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="{{ asset('../tests/tableaux.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutCarte.js') }}" defer></script>
     <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutParticipant.js') }}" defer></script>
+    <script type="module" src="{{ asset('../ressources/javaScript/formulaireAjoutColonne.js') }}" defer></script>
 
 
 </head>
