--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -5,6 +5,8 @@
 
 {% block page_content %}
 
+    {# TODO : appliquer les droits d'accès en fonction des utilisateurs ! #}
+
     <script type="text/javascript">let siteBase = "{{ asset('.') }}";
         let apiBase = siteBase + "/api";</script>
 
