--- a/tests/tests.css
+++ b/tests/tests.css
@@ -374,7 +374,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    cursor: default;
     width: 25px;
     height: 25px;
     border-radius: 50%;
