--- a/src/vue/tableau/tableau.html.twig
+++ b/src/vue/tableau/tableau.html.twig
@@ -48,18 +48,12 @@
                                 <span class="color" style="border : 5px solid {{ carte.couleurCarte }}"></span>
                                 {{ carte.titreCarte }}
                                 <div class="features">
-                                    {% for utilisateur in participants %}
-                                        {# en sachant que le contenu json d'un participant est {"touzer":{"infos":{"login":"touzer","nom":"Touz\u00e9","prenom":"Romain"},"colonnes":{"17":["Totam culpa nihil en",3]}} #}
-                                        {# on doit donc afficher le tout ssi l'id de la carte est égal à l'un des idCarte dans "colonnes" #}
-                                        {# on a donc dans utilisateur :  "login":{"infos":{"login":"Bouah","nom":"Bouah","prenom":"Bouah"},"colonnes":{"idColonne":["titreCarte",idCarte]}} #}
-                                        {% for idColonne, carteData in utilisateur.colonnes %}
-                                            {# carte.idCarte #}
-                                            {# carteData|json_encode #}
-                                            {% if carte.idCarte in carteData  %}
-                                                <span class="user">{{ utilisateur.infos.prenom|slice(0,1) }}{{ utilisateur.infos.nom|slice(0,1) }}</span>
-                                            {% endif %}
-                                        {% endfor %}
-
+                                    {% for idCarte,utilisateurs in participants %}
+                                        {% if idCarte == carte.idCarte %}
+                                            {% for utilisateur in utilisateurs %}
+                                                <span class="user">{{ utilisateur.prenom|slice(0,1) }}{{ utilisateur.nom|slice(0,1) }}</span>
+                                            {% endfor %}
+                                        {% endif %}
                                     {% endfor %}
                                 </div>
                             </div>
